--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <h2 class="subtitle is-5">February 15, 2018</h2>
       
       <div class="content">
-        Testing, testing, 1 2 3, eins, zwei, drei
+        Testing a change.
         
       </div>
     </article>
